// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`@xsmcp/everything-original > callTool 1`] = `
{
  "content": [
    {
      "text": "The sum of 1 and 1 is 2.",
      "type": "text",
    },
  ],
}
`;

exports[`@xsmcp/everything-original > callTool 2`] = `
{
  "content": [
    {
      "text": "Echo: Hello, World!",
      "type": "text",
    },
  ],
}
`;

exports[`@xsmcp/everything-original > callTool 3`] = `
{
  "content": [
    {
      "text": "Long running operation completed. Duration: 1 seconds, Steps: 2.",
      "type": "text",
    },
  ],
}
`;

exports[`@xsmcp/everything-original > callTool 4`] = `
{
  "content": [
    {
      "text": "This is a tiny image:",
      "type": "text",
    },
    {
      "data": "iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAKsGlDQ1BJQ0MgUHJvZmlsZQAASImVlwdUU+kSgOfe9JDQEiIgJfQmSCeAlBBaAAXpYCMkAUKJMRBU7MriClZURLCs6KqIgo0idizYFsWC3QVZBNR1sWDDlXeBQ9jdd9575805c+a7c+efmf+e/z9nLgCdKZDJMlF1gCxpjjwyyI8dn5DIJvUABRiY0kBdIMyWcSMiwgCTUft3+dgGyJC9YzuU69/f/1fREImzhQBIBMbJomxhFsbHMe0TyuQ5ALg9mN9kbo5siK9gzJRjDWL8ZIhTR7hviJOHGY8fjomO5GGsDUCmCQTyVACaKeZn5wpTsTw0f4ztpSKJFGPsGbyzsmaLMMbqgiUWI8N4KD8n+S95Uv+WM1mZUyBIVfLIXoaF7C/JlmUK5v+fn+N/S1amYrSGOaa0NHlwJGaxvpAHGbNDlSxNnhI+yhLRcPwwpymCY0ZZmM1LHGWRwD9UuTZzStgop0gC+co8OfzoURZnB0SNsnx2pLJWipzHHWWBfKyuIiNG6U8T85X589Ki40Y5VxI7ZZSzM6JCx2J4Sr9cEansXywN8hurG6jce1b2X/Yr4SvX5qRFByv3LhjrXyzljuXMjlf2JhL7B4zFxCjjZTl+ylqyzAhlvDgzSOnPzo1Srs3BDuTY2gjlN0wXhESMMoRBELAhBjIhB+QggECQgBTEOeJ5Q2cUeLNl8+WS1LQcNhe7ZWI2Xyq0m8B2tHd0Bhi6syNH4j1r+C4irGtjvhWVAF4nBgcHT475Qm4BHEkCoNaO+SxnAKh3A1w5JVTIc0d8Q9cJCEAFNWCCDhiACViCLTiCK3iCLwRACIRDNCTATBBCGmRhnc+FhbAMCqAI1sNmKIOdsBv2wyE4CvVwCs7DZbgOt+AePIZ26IJX0AcfYQBBEBJCRxiIDmKImCE2iCPCQbyRACQMiUQSkCQkFZEiCmQhsgIpQoqRMmQXUokcQU4g55GrSCvyEOlAepF3yFcUh9JQJqqPmqMTUQ7KRUPRaHQGmorOQfPQfHQtWopWoAfROvQ8eh29h7ajr9B+HOBUcCycEc4Wx8HxcOG4RFwKTo5bjCvEleAqcNW4Rlwz7g6uHfca9wVPxDPwbLwt3hMfjI/BC/Fz8Ivxq/Fl+P34OvxF/B18B74P/51AJ+gRbAgeBD4hnpBKmEsoIJQQ9hJqCZcI9whdhI9EIpFFtCC6EYOJCcR04gLiauJ2Yg3xHLGV2EnsJ5FIOiQbkhcpnCQg5ZAKSFtJB0lnSbdJXaTPZBWyIdmRHEhOJEvJy8kl5APkM+Tb5G7yAEWdYkbxoIRTRJT5lHWUPZRGyk1KF2WAqkG1oHpRo6np1GXUUmo19RL1CfW9ioqKsYq7ylQVicpSlVKVwypXVDpUvtA0adY0Hm06TUFbS9tHO0d7SHtPp9PN6b70RHoOfS29kn6B/oz+WZWhaqfKVxWpLlEtV61Tva36Ro2iZqbGVZuplqdWonZM7abaa3WKurk6T12gvli9XP2E+n31fg2GhoNGuEaWxmqNAxpXNXo0SZrmmgGaIs18zd2aFzQ7GTiGCYPHEDJWMPYwLjG6mESmBZPPTGcWMQ8xW5h9WppazlqxWvO0yrVOa7WzcCxzFp+VyVrHOspqY30dpz+OO048btW46nG3x33SHq/tqy3WLtSu0b6n/VWHrROgk6GzQade56kuXtdad6ruXN0dupd0X49njvccLxxfOP7o+Ed6qJ61XqTeAr3dejf0+vUN9IP0Zfpb9S/ovzZgGfgapBtsMjhj0GvIMPQ2lBhuMjxr+JKtxeayM9ml7IvsPiM9o2AjhdEuoxajAWML4xjj5cY1xk9NqCYckxSTTSZNJn2mhqaTTReaVpk+MqOYcczSzLaYNZt9MrcwjzNfaV5v3mOhbcG3yLOosnhiSbf0sZxjWWF514poxbHKsNpudcsatXaxTrMut75pg9q42khsttu0TiBMcJ8gnVAx4b4tzZZrm2tbZdthx7ILs1tuV2/3ZqLpxMSJGyY2T/xu72Kfab/H/rGDpkOIw3KHRod3jtaOQsdyx7tOdKdApyVODU5vnW2cxc47nB+4MFwmu6x0aXL509XNVe5a7drrZuqW5LbN7T6HyYngrOZccSe4+7kvcT/l/sXD1SPH46jHH562nhmeBzx7JllMEk/aM6nTy9hL4LXLq92b7Z3k/ZN3u4+Rj8Cnwue5r4mvyHevbzfXipvOPch942fvJ/er9fvE8+At4p3zx/kH+Rf6twRoBsQElAU8CzQOTA2sCuwLcglaEHQumBAcGrwh+D5fny/kV/L7QtxCFoVcDKWFRoWWhT4Psw6ThzVORieHTN44+ckUsynSKfXhEM4P3xj+NMIiYk7EyanEqRFTy6e+iHSIXBjZHMWImhV1IOpjtF/0uujHMZYxipimWLXY6bGVsZ/i/OOK49rjJ8Yvir+eoJsgSWhIJCXGJu5N7J8WMG3ztK7pLtMLprfNsJgxb8bVmbozM2eenqU2SzDrWBIhKS7pQNI3QbigQtCfzE/eltwn5Am3CF+JfEWbRL1iL3GxuDvFK6U4pSfVK3Vjam+aT1pJ2msJT1ImeZsenL4z/VNGeMa+jMHMuMyaLHJWUtYJqaY0Q3pxtsHsebNbZTayAln7HI85m+f0yUPle7OR7BnZDTlMbDi6obBU/KDoyPXOLc/9PDd27rF5GvOk827Mt56/an53XmDezwvwC4QLmhYaLVy2sGMRd9Guxcji5MVNS0yW5C/pWhq0dP8y6rKMZb8st19evPzDirgVjfn6+UvzO38I+qGqQLVAXnB/pefKnT/if5T82LLKadXWVd8LRYXXiuyLSoq+rRauvrbGYU3pmsG1KWtb1rmu27GeuF66vm2Dz4b9xRrFecWdGydvrNvE3lS46cPmWZuvljiX7NxC3aLY0l4aVtqw1XTr+q3fytLK7pX7ldds09u2atun7aLtt3f47qjeqb+zaOfXnyQ/PdgVtKuuwryiZDdxd+7uF3ti9zT/zPm5cq/u3qK9f+6T7mvfH7n/YqVbZeUBvQPrqtAqRVXvwekHbx3yP9RQbVu9q4ZVU3QYDisOvzySdKTtaOjRpmOcY9XHzY5vq2XUFtYhdfPr+urT6tsbEhpaT4ScaGr0bKw9aXdy3ymjU+WntU6vO0M9k39m8Gze2f5zsnOvz6ee72ya1fT4QvyFuxenXmy5FHrpyuXAyxeauc1nr3hdOXXV4+qJa5xr9dddr9fdcLlR+4vLL7Utri11N91uNtzyv9XYOqn1zG2f2+fv+N+5fJd/9/q9Kfda22LaHtyffr/9gehBz8PMh28f5T4aeLz0CeFJ4VP1pyXP9J5V/Gr1a027a/vpDv+OG8+jnj/uFHa++i37t29d+S/oL0q6Dbsrexx7TvUG9t56Oe1l1yvZq4HXBb9r/L7tjeWb43/4/nGjL76v66387eC71e913u/74PyhqT+i/9nHrI8Dnwo/63ze/4Xzpflr3NfugbnfSN9K/7T6s/F76Pcng1mDgzKBXDA8CuAwRVNSAN7tA6AnADCwGYI6bWSmHhZk5D9gmOA/8cjcPSyuANWYGRqNeOcADmNqvhRAzRdgaCyK9gXUyUmpo/Pv8Kw+JAbYv8K0HECi2x6tebQU/iEjc/xf+v6nBWXWv9l/AV0EC6JTIblRAAAAeGVYSWZNTQAqAAAACAAFARIAAwAAAAEAAQAAARoABQAAAAEAAABKARsABQAAAAEAAABSASgAAwAAAAEAAgAAh2kABAAAAAEAAABaAAAAAAAAAJAAAAABAAAAkAAAAAEAAqACAAQAAAABAAAAFKADAAQAAAABAAAAFAAAAAAXNii1AAAACXBIWXMAABYlAAAWJQFJUiTwAAAB82lUWHRYTUw6Y29tLmFkb2JlLnhtcAAAAAAAPHg6eG1wbWV0YSB4bWxuczp4PSJhZG9iZTpuczptZXRhLyIgeDp4bXB0az0iWE1QIENvcmUgNi4wLjAiPgogICA8cmRmOlJERiB4bWxuczpyZGY9Imh0dHA6Ly93d3cudzMub3JnLzE5OTkvMDIvMjItcmRmLXN5bnRheC1ucyMiPgogICAgICA8cmRmOkRlc2NyaXB0aW9uIHJkZjphYm91dD0iIgogICAgICAgICAgICB4bWxuczp0aWZmPSJodHRwOi8vbnMuYWRvYmUuY29tL3RpZmYvMS4wLyI+CiAgICAgICAgIDx0aWZmOllSZXNvbHV0aW9uPjE0NDwvdGlmZjpZUmVzb2x1dGlvbj4KICAgICAgICAgPHRpZmY6T3JpZW50YXRpb24+MTwvdGlmZjpPcmllbnRhdGlvbj4KICAgICAgICAgPHRpZmY6WFJlc29sdXRpb24+MTQ0PC90aWZmOlhSZXNvbHV0aW9uPgogICAgICAgICA8dGlmZjpSZXNvbHV0aW9uVW5pdD4yPC90aWZmOlJlc29sdXRpb25Vbml0PgogICAgICA8L3JkZjpEZXNjcmlwdGlvbj4KICAgPC9yZGY6UkRGPgo8L3g6eG1wbWV0YT4KReh49gAAAjRJREFUOBGFlD2vMUEUx2clvoNCcW8hCqFAo1dKhEQpvsF9KrWEBh/ALbQ0KkInBI3SWyGPCCJEQliXgsTLefaca/bBWjvJzs6cOf/fnDkzOQJIjWm06/XKBEGgD8c6nU5VIWgBtQDPZPWtJE8O63a7LBgMMo/Hw0ql0jPjcY4RvmqXy4XMjUYDUwLtdhtmsxnYbDbI5/O0djqdFFKmsEiGZ9jP9gem0yn0ej2Yz+fg9XpfycimAD7DttstQTDKfr8Po9GIIg6Hw1Cr1RTgB+A72GAwgMPhQLBMJgNSXsFqtUI2myUo18pA6QJogefsPrLBX4QdCVatViklw+EQRFGEj88P2O12pEUGATmsXq+TaLPZ0AXgMRF2vMEqlQoJTSYTpNNpApvNZliv1/+BHDaZTAi2Wq1A3Ig0xmMej7+RcZjdbodUKkWAaDQK+GHjHPnImB88JrZIJAKFQgH2+z2BOczhcMiwRCIBgUAA+NN5BP6mj2DYff35gk6nA61WCzBn2JxO5wPM7/fLz4vD0E+OECfn8xl/0Gw2KbLxeAyLxQIsFgt8p75pDSO7h/HbpUWpewCike9WLpfB7XaDy+WCYrFI/slk8i0MnRRAUt46hPMI4vE4+Hw+ec7t9/44VgWigEeby+UgFArJWjUYOqhWG6x50rpcSfR6PVUfNOgEVRlTX0HhrZBKz4MZjUYWi8VoA+lc9H/VaRZYjBKrtXR8tlwumcFgeMWRbZpA9ORQWfVm8A/FsrLaxebd5wAAAABJRU5ErkJggg==",
      "mimeType": "image/png",
      "type": "image",
    },
    {
      "text": "The image above is the MCP tiny image.",
      "type": "text",
    },
  ],
}
`;

exports[`@xsmcp/everything-original > getPrompt 1`] = `
{
  "messages": [
    {
      "content": {
        "text": "This is a simple prompt without arguments.",
        "type": "text",
      },
      "role": "user",
    },
  ],
}
`;

exports[`@xsmcp/everything-original > getPrompt 2`] = `
{
  "messages": [
    {
      "content": {
        "text": "This is a complex prompt with arguments: temperature=42, style=dark",
        "type": "text",
      },
      "role": "user",
    },
    {
      "content": {
        "text": "I understand. You've provided a complex prompt with temperature and style arguments. How would you like me to proceed?",
        "type": "text",
      },
      "role": "assistant",
    },
    {
      "content": {
        "data": "iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAKsGlDQ1BJQ0MgUHJvZmlsZQAASImVlwdUU+kSgOfe9JDQEiIgJfQmSCeAlBBaAAXpYCMkAUKJMRBU7MriClZURLCs6KqIgo0idizYFsWC3QVZBNR1sWDDlXeBQ9jdd9575805c+a7c+efmf+e/z9nLgCdKZDJMlF1gCxpjjwyyI8dn5DIJvUABRiY0kBdIMyWcSMiwgCTUft3+dgGyJC9YzuU69/f/1fREImzhQBIBMbJomxhFsbHMe0TyuQ5ALg9mN9kbo5siK9gzJRjDWL8ZIhTR7hviJOHGY8fjomO5GGsDUCmCQTyVACaKeZn5wpTsTw0f4ztpSKJFGPsGbyzsmaLMMbqgiUWI8N4KD8n+S95Uv+WM1mZUyBIVfLIXoaF7C/JlmUK5v+fn+N/S1amYrSGOaa0NHlwJGaxvpAHGbNDlSxNnhI+yhLRcPwwpymCY0ZZmM1LHGWRwD9UuTZzStgop0gC+co8OfzoURZnB0SNsnx2pLJWipzHHWWBfKyuIiNG6U8T85X589Ki40Y5VxI7ZZSzM6JCx2J4Sr9cEansXywN8hurG6jce1b2X/Yr4SvX5qRFByv3LhjrXyzljuXMjlf2JhL7B4zFxCjjZTl+ylqyzAhlvDgzSOnPzo1Srs3BDuTY2gjlN0wXhESMMoRBELAhBjIhB+QggECQgBTEOeJ5Q2cUeLNl8+WS1LQcNhe7ZWI2Xyq0m8B2tHd0Bhi6syNH4j1r+C4irGtjvhWVAF4nBgcHT475Qm4BHEkCoNaO+SxnAKh3A1w5JVTIc0d8Q9cJCEAFNWCCDhiACViCLTiCK3iCLwRACIRDNCTATBBCGmRhnc+FhbAMCqAI1sNmKIOdsBv2wyE4CvVwCs7DZbgOt+AePIZ26IJX0AcfYQBBEBJCRxiIDmKImCE2iCPCQbyRACQMiUQSkCQkFZEiCmQhsgIpQoqRMmQXUokcQU4g55GrSCvyEOlAepF3yFcUh9JQJqqPmqMTUQ7KRUPRaHQGmorOQfPQfHQtWopWoAfROvQ8eh29h7ajr9B+HOBUcCycEc4Wx8HxcOG4RFwKTo5bjCvEleAqcNW4Rlwz7g6uHfca9wVPxDPwbLwt3hMfjI/BC/Fz8Ivxq/Fl+P34OvxF/B18B74P/51AJ+gRbAgeBD4hnpBKmEsoIJQQ9hJqCZcI9whdhI9EIpFFtCC6EYOJCcR04gLiauJ2Yg3xHLGV2EnsJ5FIOiQbkhcpnCQg5ZAKSFtJB0lnSbdJXaTPZBWyIdmRHEhOJEvJy8kl5APkM+Tb5G7yAEWdYkbxoIRTRJT5lHWUPZRGyk1KF2WAqkG1oHpRo6np1GXUUmo19RL1CfW9ioqKsYq7ylQVicpSlVKVwypXVDpUvtA0adY0Hm06TUFbS9tHO0d7SHtPp9PN6b70RHoOfS29kn6B/oz+WZWhaqfKVxWpLlEtV61Tva36Ro2iZqbGVZuplqdWonZM7abaa3WKurk6T12gvli9XP2E+n31fg2GhoNGuEaWxmqNAxpXNXo0SZrmmgGaIs18zd2aFzQ7GTiGCYPHEDJWMPYwLjG6mESmBZPPTGcWMQ8xW5h9WppazlqxWvO0yrVOa7WzcCxzFp+VyVrHOspqY30dpz+OO048btW46nG3x33SHq/tqy3WLtSu0b6n/VWHrROgk6GzQade56kuXtdad6ruXN0dupd0X49njvccLxxfOP7o+Ed6qJ61XqTeAr3dejf0+vUN9IP0Zfpb9S/ovzZgGfgapBtsMjhj0GvIMPQ2lBhuMjxr+JKtxeayM9ml7IvsPiM9o2AjhdEuoxajAWML4xjj5cY1xk9NqCYckxSTTSZNJn2mhqaTTReaVpk+MqOYcczSzLaYNZt9MrcwjzNfaV5v3mOhbcG3yLOosnhiSbf0sZxjWWF514poxbHKsNpudcsatXaxTrMut75pg9q42khsttu0TiBMcJ8gnVAx4b4tzZZrm2tbZdthx7ILs1tuV2/3ZqLpxMSJGyY2T/xu72Kfab/H/rGDpkOIw3KHRod3jtaOQsdyx7tOdKdApyVODU5vnW2cxc47nB+4MFwmu6x0aXL509XNVe5a7drrZuqW5LbN7T6HyYngrOZccSe4+7kvcT/l/sXD1SPH46jHH562nhmeBzx7JllMEk/aM6nTy9hL4LXLq92b7Z3k/ZN3u4+Rj8Cnwue5r4mvyHevbzfXipvOPch942fvJ/er9fvE8+At4p3zx/kH+Rf6twRoBsQElAU8CzQOTA2sCuwLcglaEHQumBAcGrwh+D5fny/kV/L7QtxCFoVcDKWFRoWWhT4Psw6ThzVORieHTN44+ckUsynSKfXhEM4P3xj+NMIiYk7EyanEqRFTy6e+iHSIXBjZHMWImhV1IOpjtF/0uujHMZYxipimWLXY6bGVsZ/i/OOK49rjJ8Yvir+eoJsgSWhIJCXGJu5N7J8WMG3ztK7pLtMLprfNsJgxb8bVmbozM2eenqU2SzDrWBIhKS7pQNI3QbigQtCfzE/eltwn5Am3CF+JfEWbRL1iL3GxuDvFK6U4pSfVK3Vjam+aT1pJ2msJT1ImeZsenL4z/VNGeMa+jMHMuMyaLHJWUtYJqaY0Q3pxtsHsebNbZTayAln7HI85m+f0yUPle7OR7BnZDTlMbDi6obBU/KDoyPXOLc/9PDd27rF5GvOk827Mt56/an53XmDezwvwC4QLmhYaLVy2sGMRd9Guxcji5MVNS0yW5C/pWhq0dP8y6rKMZb8st19evPzDirgVjfn6+UvzO38I+qGqQLVAXnB/pefKnT/if5T82LLKadXWVd8LRYXXiuyLSoq+rRauvrbGYU3pmsG1KWtb1rmu27GeuF66vm2Dz4b9xRrFecWdGydvrNvE3lS46cPmWZuvljiX7NxC3aLY0l4aVtqw1XTr+q3fytLK7pX7ldds09u2atun7aLtt3f47qjeqb+zaOfXnyQ/PdgVtKuuwryiZDdxd+7uF3ti9zT/zPm5cq/u3qK9f+6T7mvfH7n/YqVbZeUBvQPrqtAqRVXvwekHbx3yP9RQbVu9q4ZVU3QYDisOvzySdKTtaOjRpmOcY9XHzY5vq2XUFtYhdfPr+urT6tsbEhpaT4ScaGr0bKw9aXdy3ymjU+WntU6vO0M9k39m8Gze2f5zsnOvz6ee72ya1fT4QvyFuxenXmy5FHrpyuXAyxeauc1nr3hdOXXV4+qJa5xr9dddr9fdcLlR+4vLL7Utri11N91uNtzyv9XYOqn1zG2f2+fv+N+5fJd/9/q9Kfda22LaHtyffr/9gehBz8PMh28f5T4aeLz0CeFJ4VP1pyXP9J5V/Gr1a027a/vpDv+OG8+jnj/uFHa++i37t29d+S/oL0q6Dbsrexx7TvUG9t56Oe1l1yvZq4HXBb9r/L7tjeWb43/4/nGjL76v66387eC71e913u/74PyhqT+i/9nHrI8Dnwo/63ze/4Xzpflr3NfugbnfSN9K/7T6s/F76Pcng1mDgzKBXDA8CuAwRVNSAN7tA6AnADCwGYI6bWSmHhZk5D9gmOA/8cjcPSyuANWYGRqNeOcADmNqvhRAzRdgaCyK9gXUyUmpo/Pv8Kw+JAbYv8K0HECi2x6tebQU/iEjc/xf+v6nBWXWv9l/AV0EC6JTIblRAAAAeGVYSWZNTQAqAAAACAAFARIAAwAAAAEAAQAAARoABQAAAAEAAABKARsABQAAAAEAAABSASgAAwAAAAEAAgAAh2kABAAAAAEAAABaAAAAAAAAAJAAAAABAAAAkAAAAAEAAqACAAQAAAABAAAAFKADAAQAAAABAAAAFAAAAAAXNii1AAAACXBIWXMAABYlAAAWJQFJUiTwAAAB82lUWHRYTUw6Y29tLmFkb2JlLnhtcAAAAAAAPHg6eG1wbWV0YSB4bWxuczp4PSJhZG9iZTpuczptZXRhLyIgeDp4bXB0az0iWE1QIENvcmUgNi4wLjAiPgogICA8cmRmOlJERiB4bWxuczpyZGY9Imh0dHA6Ly93d3cudzMub3JnLzE5OTkvMDIvMjItcmRmLXN5bnRheC1ucyMiPgogICAgICA8cmRmOkRlc2NyaXB0aW9uIHJkZjphYm91dD0iIgogICAgICAgICAgICB4bWxuczp0aWZmPSJodHRwOi8vbnMuYWRvYmUuY29tL3RpZmYvMS4wLyI+CiAgICAgICAgIDx0aWZmOllSZXNvbHV0aW9uPjE0NDwvdGlmZjpZUmVzb2x1dGlvbj4KICAgICAgICAgPHRpZmY6T3JpZW50YXRpb24+MTwvdGlmZjpPcmllbnRhdGlvbj4KICAgICAgICAgPHRpZmY6WFJlc29sdXRpb24+MTQ0PC90aWZmOlhSZXNvbHV0aW9uPgogICAgICAgICA8dGlmZjpSZXNvbHV0aW9uVW5pdD4yPC90aWZmOlJlc29sdXRpb25Vbml0PgogICAgICA8L3JkZjpEZXNjcmlwdGlvbj4KICAgPC9yZGY6UkRGPgo8L3g6eG1wbWV0YT4KReh49gAAAjRJREFUOBGFlD2vMUEUx2clvoNCcW8hCqFAo1dKhEQpvsF9KrWEBh/ALbQ0KkInBI3SWyGPCCJEQliXgsTLefaca/bBWjvJzs6cOf/fnDkzOQJIjWm06/XKBEGgD8c6nU5VIWgBtQDPZPWtJE8O63a7LBgMMo/Hw0ql0jPjcY4RvmqXy4XMjUYDUwLtdhtmsxnYbDbI5/O0djqdFFKmsEiGZ9jP9gem0yn0ej2Yz+fg9XpfycimAD7DttstQTDKfr8Po9GIIg6Hw1Cr1RTgB+A72GAwgMPhQLBMJgNSXsFqtUI2myUo18pA6QJogefsPrLBX4QdCVatViklw+EQRFGEj88P2O12pEUGATmsXq+TaLPZ0AXgMRF2vMEqlQoJTSYTpNNpApvNZliv1/+BHDaZTAi2Wq1A3Ig0xmMej7+RcZjdbodUKkWAaDQK+GHjHPnImB88JrZIJAKFQgH2+z2BOczhcMiwRCIBgUAA+NN5BP6mj2DYff35gk6nA61WCzBn2JxO5wPM7/fLz4vD0E+OECfn8xl/0Gw2KbLxeAyLxQIsFgt8p75pDSO7h/HbpUWpewCike9WLpfB7XaDy+WCYrFI/slk8i0MnRRAUt46hPMI4vE4+Hw+ec7t9/44VgWigEeby+UgFArJWjUYOqhWG6x50rpcSfR6PVUfNOgEVRlTX0HhrZBKz4MZjUYWi8VoA+lc9H/VaRZYjBKrtXR8tlwumcFgeMWRbZpA9ORQWfVm8A/FsrLaxebd5wAAAABJRU5ErkJggg==",
        "mimeType": "image/png",
        "type": "image",
      },
      "role": "user",
    },
  ],
}
`;

exports[`@xsmcp/everything-original > getPrompt 3`] = `
{
  "messages": [
    {
      "content": {
        "text": "This prompt includes Resource 2. Please analyze the following resource:",
        "type": "text",
      },
      "role": "user",
    },
    {
      "content": {
        "resource": {
          "blob": "UmVzb3VyY2UgMjogVGhpcyBpcyBhIGJhc2U2NCBibG9i",
          "mimeType": "application/octet-stream",
          "name": "Resource 2",
          "uri": "test://static/resource/2",
        },
        "type": "resource",
      },
      "role": "user",
    },
  ],
}
`;

exports[`@xsmcp/everything-original > listPrompts 1`] = `
[
  {
    "description": "A prompt without arguments",
    "name": "simple_prompt",
  },
  {
    "arguments": [
      {
        "description": "Temperature setting",
        "name": "temperature",
        "required": true,
      },
      {
        "description": "Output style",
        "name": "style",
        "required": false,
      },
    ],
    "description": "A prompt with arguments",
    "name": "complex_prompt",
  },
  {
    "arguments": [
      {
        "description": "Resource ID to include (1-100)",
        "name": "resourceId",
        "required": true,
      },
    ],
    "description": "A prompt that includes an embedded resource reference",
    "name": "resource_prompt",
  },
]
`;

exports[`@xsmcp/everything-original > listResourceTemplates 1`] = `
[
  {
    "description": "A static resource with a numeric ID",
    "name": "Static Resource",
    "uriTemplate": "test://static/resource/{id}",
  },
]
`;

exports[`@xsmcp/everything-original > listResources 1`] = `
[
  {
    "mimeType": "text/plain",
    "name": "Resource 1",
    "text": "Resource 1: This is a plaintext resource",
    "uri": "test://static/resource/1",
  },
  {
    "blob": "UmVzb3VyY2UgMjogVGhpcyBpcyBhIGJhc2U2NCBibG9i",
    "mimeType": "application/octet-stream",
    "name": "Resource 2",
    "uri": "test://static/resource/2",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 3",
    "text": "Resource 3: This is a plaintext resource",
    "uri": "test://static/resource/3",
  },
  {
    "blob": "UmVzb3VyY2UgNDogVGhpcyBpcyBhIGJhc2U2NCBibG9i",
    "mimeType": "application/octet-stream",
    "name": "Resource 4",
    "uri": "test://static/resource/4",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 5",
    "text": "Resource 5: This is a plaintext resource",
    "uri": "test://static/resource/5",
  },
  {
    "blob": "UmVzb3VyY2UgNjogVGhpcyBpcyBhIGJhc2U2NCBibG9i",
    "mimeType": "application/octet-stream",
    "name": "Resource 6",
    "uri": "test://static/resource/6",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 7",
    "text": "Resource 7: This is a plaintext resource",
    "uri": "test://static/resource/7",
  },
  {
    "blob": "UmVzb3VyY2UgODogVGhpcyBpcyBhIGJhc2U2NCBibG9i",
    "mimeType": "application/octet-stream",
    "name": "Resource 8",
    "uri": "test://static/resource/8",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 9",
    "text": "Resource 9: This is a plaintext resource",
    "uri": "test://static/resource/9",
  },
  {
    "blob": "UmVzb3VyY2UgMTA6IFRoaXMgaXMgYSBiYXNlNjQgYmxvYg==",
    "mimeType": "application/octet-stream",
    "name": "Resource 10",
    "uri": "test://static/resource/10",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 11",
    "text": "Resource 11: This is a plaintext resource",
    "uri": "test://static/resource/11",
  },
  {
    "blob": "UmVzb3VyY2UgMTI6IFRoaXMgaXMgYSBiYXNlNjQgYmxvYg==",
    "mimeType": "application/octet-stream",
    "name": "Resource 12",
    "uri": "test://static/resource/12",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 13",
    "text": "Resource 13: This is a plaintext resource",
    "uri": "test://static/resource/13",
  },
  {
    "blob": "UmVzb3VyY2UgMTQ6IFRoaXMgaXMgYSBiYXNlNjQgYmxvYg==",
    "mimeType": "application/octet-stream",
    "name": "Resource 14",
    "uri": "test://static/resource/14",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 15",
    "text": "Resource 15: This is a plaintext resource",
    "uri": "test://static/resource/15",
  },
  {
    "blob": "UmVzb3VyY2UgMTY6IFRoaXMgaXMgYSBiYXNlNjQgYmxvYg==",
    "mimeType": "application/octet-stream",
    "name": "Resource 16",
    "uri": "test://static/resource/16",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 17",
    "text": "Resource 17: This is a plaintext resource",
    "uri": "test://static/resource/17",
  },
  {
    "blob": "UmVzb3VyY2UgMTg6IFRoaXMgaXMgYSBiYXNlNjQgYmxvYg==",
    "mimeType": "application/octet-stream",
    "name": "Resource 18",
    "uri": "test://static/resource/18",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 19",
    "text": "Resource 19: This is a plaintext resource",
    "uri": "test://static/resource/19",
  },
  {
    "blob": "UmVzb3VyY2UgMjA6IFRoaXMgaXMgYSBiYXNlNjQgYmxvYg==",
    "mimeType": "application/octet-stream",
    "name": "Resource 20",
    "uri": "test://static/resource/20",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 21",
    "text": "Resource 21: This is a plaintext resource",
    "uri": "test://static/resource/21",
  },
  {
    "blob": "UmVzb3VyY2UgMjI6IFRoaXMgaXMgYSBiYXNlNjQgYmxvYg==",
    "mimeType": "application/octet-stream",
    "name": "Resource 22",
    "uri": "test://static/resource/22",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 23",
    "text": "Resource 23: This is a plaintext resource",
    "uri": "test://static/resource/23",
  },
  {
    "blob": "UmVzb3VyY2UgMjQ6IFRoaXMgaXMgYSBiYXNlNjQgYmxvYg==",
    "mimeType": "application/octet-stream",
    "name": "Resource 24",
    "uri": "test://static/resource/24",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 25",
    "text": "Resource 25: This is a plaintext resource",
    "uri": "test://static/resource/25",
  },
  {
    "blob": "UmVzb3VyY2UgMjY6IFRoaXMgaXMgYSBiYXNlNjQgYmxvYg==",
    "mimeType": "application/octet-stream",
    "name": "Resource 26",
    "uri": "test://static/resource/26",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 27",
    "text": "Resource 27: This is a plaintext resource",
    "uri": "test://static/resource/27",
  },
  {
    "blob": "UmVzb3VyY2UgMjg6IFRoaXMgaXMgYSBiYXNlNjQgYmxvYg==",
    "mimeType": "application/octet-stream",
    "name": "Resource 28",
    "uri": "test://static/resource/28",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 29",
    "text": "Resource 29: This is a plaintext resource",
    "uri": "test://static/resource/29",
  },
  {
    "blob": "UmVzb3VyY2UgMzA6IFRoaXMgaXMgYSBiYXNlNjQgYmxvYg==",
    "mimeType": "application/octet-stream",
    "name": "Resource 30",
    "uri": "test://static/resource/30",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 31",
    "text": "Resource 31: This is a plaintext resource",
    "uri": "test://static/resource/31",
  },
  {
    "blob": "UmVzb3VyY2UgMzI6IFRoaXMgaXMgYSBiYXNlNjQgYmxvYg==",
    "mimeType": "application/octet-stream",
    "name": "Resource 32",
    "uri": "test://static/resource/32",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 33",
    "text": "Resource 33: This is a plaintext resource",
    "uri": "test://static/resource/33",
  },
  {
    "blob": "UmVzb3VyY2UgMzQ6IFRoaXMgaXMgYSBiYXNlNjQgYmxvYg==",
    "mimeType": "application/octet-stream",
    "name": "Resource 34",
    "uri": "test://static/resource/34",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 35",
    "text": "Resource 35: This is a plaintext resource",
    "uri": "test://static/resource/35",
  },
  {
    "blob": "UmVzb3VyY2UgMzY6IFRoaXMgaXMgYSBiYXNlNjQgYmxvYg==",
    "mimeType": "application/octet-stream",
    "name": "Resource 36",
    "uri": "test://static/resource/36",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 37",
    "text": "Resource 37: This is a plaintext resource",
    "uri": "test://static/resource/37",
  },
  {
    "blob": "UmVzb3VyY2UgMzg6IFRoaXMgaXMgYSBiYXNlNjQgYmxvYg==",
    "mimeType": "application/octet-stream",
    "name": "Resource 38",
    "uri": "test://static/resource/38",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 39",
    "text": "Resource 39: This is a plaintext resource",
    "uri": "test://static/resource/39",
  },
  {
    "blob": "UmVzb3VyY2UgNDA6IFRoaXMgaXMgYSBiYXNlNjQgYmxvYg==",
    "mimeType": "application/octet-stream",
    "name": "Resource 40",
    "uri": "test://static/resource/40",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 41",
    "text": "Resource 41: This is a plaintext resource",
    "uri": "test://static/resource/41",
  },
  {
    "blob": "UmVzb3VyY2UgNDI6IFRoaXMgaXMgYSBiYXNlNjQgYmxvYg==",
    "mimeType": "application/octet-stream",
    "name": "Resource 42",
    "uri": "test://static/resource/42",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 43",
    "text": "Resource 43: This is a plaintext resource",
    "uri": "test://static/resource/43",
  },
  {
    "blob": "UmVzb3VyY2UgNDQ6IFRoaXMgaXMgYSBiYXNlNjQgYmxvYg==",
    "mimeType": "application/octet-stream",
    "name": "Resource 44",
    "uri": "test://static/resource/44",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 45",
    "text": "Resource 45: This is a plaintext resource",
    "uri": "test://static/resource/45",
  },
  {
    "blob": "UmVzb3VyY2UgNDY6IFRoaXMgaXMgYSBiYXNlNjQgYmxvYg==",
    "mimeType": "application/octet-stream",
    "name": "Resource 46",
    "uri": "test://static/resource/46",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 47",
    "text": "Resource 47: This is a plaintext resource",
    "uri": "test://static/resource/47",
  },
  {
    "blob": "UmVzb3VyY2UgNDg6IFRoaXMgaXMgYSBiYXNlNjQgYmxvYg==",
    "mimeType": "application/octet-stream",
    "name": "Resource 48",
    "uri": "test://static/resource/48",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 49",
    "text": "Resource 49: This is a plaintext resource",
    "uri": "test://static/resource/49",
  },
  {
    "blob": "UmVzb3VyY2UgNTA6IFRoaXMgaXMgYSBiYXNlNjQgYmxvYg==",
    "mimeType": "application/octet-stream",
    "name": "Resource 50",
    "uri": "test://static/resource/50",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 51",
    "text": "Resource 51: This is a plaintext resource",
    "uri": "test://static/resource/51",
  },
  {
    "blob": "UmVzb3VyY2UgNTI6IFRoaXMgaXMgYSBiYXNlNjQgYmxvYg==",
    "mimeType": "application/octet-stream",
    "name": "Resource 52",
    "uri": "test://static/resource/52",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 53",
    "text": "Resource 53: This is a plaintext resource",
    "uri": "test://static/resource/53",
  },
  {
    "blob": "UmVzb3VyY2UgNTQ6IFRoaXMgaXMgYSBiYXNlNjQgYmxvYg==",
    "mimeType": "application/octet-stream",
    "name": "Resource 54",
    "uri": "test://static/resource/54",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 55",
    "text": "Resource 55: This is a plaintext resource",
    "uri": "test://static/resource/55",
  },
  {
    "blob": "UmVzb3VyY2UgNTY6IFRoaXMgaXMgYSBiYXNlNjQgYmxvYg==",
    "mimeType": "application/octet-stream",
    "name": "Resource 56",
    "uri": "test://static/resource/56",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 57",
    "text": "Resource 57: This is a plaintext resource",
    "uri": "test://static/resource/57",
  },
  {
    "blob": "UmVzb3VyY2UgNTg6IFRoaXMgaXMgYSBiYXNlNjQgYmxvYg==",
    "mimeType": "application/octet-stream",
    "name": "Resource 58",
    "uri": "test://static/resource/58",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 59",
    "text": "Resource 59: This is a plaintext resource",
    "uri": "test://static/resource/59",
  },
  {
    "blob": "UmVzb3VyY2UgNjA6IFRoaXMgaXMgYSBiYXNlNjQgYmxvYg==",
    "mimeType": "application/octet-stream",
    "name": "Resource 60",
    "uri": "test://static/resource/60",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 61",
    "text": "Resource 61: This is a plaintext resource",
    "uri": "test://static/resource/61",
  },
  {
    "blob": "UmVzb3VyY2UgNjI6IFRoaXMgaXMgYSBiYXNlNjQgYmxvYg==",
    "mimeType": "application/octet-stream",
    "name": "Resource 62",
    "uri": "test://static/resource/62",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 63",
    "text": "Resource 63: This is a plaintext resource",
    "uri": "test://static/resource/63",
  },
  {
    "blob": "UmVzb3VyY2UgNjQ6IFRoaXMgaXMgYSBiYXNlNjQgYmxvYg==",
    "mimeType": "application/octet-stream",
    "name": "Resource 64",
    "uri": "test://static/resource/64",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 65",
    "text": "Resource 65: This is a plaintext resource",
    "uri": "test://static/resource/65",
  },
  {
    "blob": "UmVzb3VyY2UgNjY6IFRoaXMgaXMgYSBiYXNlNjQgYmxvYg==",
    "mimeType": "application/octet-stream",
    "name": "Resource 66",
    "uri": "test://static/resource/66",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 67",
    "text": "Resource 67: This is a plaintext resource",
    "uri": "test://static/resource/67",
  },
  {
    "blob": "UmVzb3VyY2UgNjg6IFRoaXMgaXMgYSBiYXNlNjQgYmxvYg==",
    "mimeType": "application/octet-stream",
    "name": "Resource 68",
    "uri": "test://static/resource/68",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 69",
    "text": "Resource 69: This is a plaintext resource",
    "uri": "test://static/resource/69",
  },
  {
    "blob": "UmVzb3VyY2UgNzA6IFRoaXMgaXMgYSBiYXNlNjQgYmxvYg==",
    "mimeType": "application/octet-stream",
    "name": "Resource 70",
    "uri": "test://static/resource/70",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 71",
    "text": "Resource 71: This is a plaintext resource",
    "uri": "test://static/resource/71",
  },
  {
    "blob": "UmVzb3VyY2UgNzI6IFRoaXMgaXMgYSBiYXNlNjQgYmxvYg==",
    "mimeType": "application/octet-stream",
    "name": "Resource 72",
    "uri": "test://static/resource/72",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 73",
    "text": "Resource 73: This is a plaintext resource",
    "uri": "test://static/resource/73",
  },
  {
    "blob": "UmVzb3VyY2UgNzQ6IFRoaXMgaXMgYSBiYXNlNjQgYmxvYg==",
    "mimeType": "application/octet-stream",
    "name": "Resource 74",
    "uri": "test://static/resource/74",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 75",
    "text": "Resource 75: This is a plaintext resource",
    "uri": "test://static/resource/75",
  },
  {
    "blob": "UmVzb3VyY2UgNzY6IFRoaXMgaXMgYSBiYXNlNjQgYmxvYg==",
    "mimeType": "application/octet-stream",
    "name": "Resource 76",
    "uri": "test://static/resource/76",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 77",
    "text": "Resource 77: This is a plaintext resource",
    "uri": "test://static/resource/77",
  },
  {
    "blob": "UmVzb3VyY2UgNzg6IFRoaXMgaXMgYSBiYXNlNjQgYmxvYg==",
    "mimeType": "application/octet-stream",
    "name": "Resource 78",
    "uri": "test://static/resource/78",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 79",
    "text": "Resource 79: This is a plaintext resource",
    "uri": "test://static/resource/79",
  },
  {
    "blob": "UmVzb3VyY2UgODA6IFRoaXMgaXMgYSBiYXNlNjQgYmxvYg==",
    "mimeType": "application/octet-stream",
    "name": "Resource 80",
    "uri": "test://static/resource/80",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 81",
    "text": "Resource 81: This is a plaintext resource",
    "uri": "test://static/resource/81",
  },
  {
    "blob": "UmVzb3VyY2UgODI6IFRoaXMgaXMgYSBiYXNlNjQgYmxvYg==",
    "mimeType": "application/octet-stream",
    "name": "Resource 82",
    "uri": "test://static/resource/82",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 83",
    "text": "Resource 83: This is a plaintext resource",
    "uri": "test://static/resource/83",
  },
  {
    "blob": "UmVzb3VyY2UgODQ6IFRoaXMgaXMgYSBiYXNlNjQgYmxvYg==",
    "mimeType": "application/octet-stream",
    "name": "Resource 84",
    "uri": "test://static/resource/84",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 85",
    "text": "Resource 85: This is a plaintext resource",
    "uri": "test://static/resource/85",
  },
  {
    "blob": "UmVzb3VyY2UgODY6IFRoaXMgaXMgYSBiYXNlNjQgYmxvYg==",
    "mimeType": "application/octet-stream",
    "name": "Resource 86",
    "uri": "test://static/resource/86",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 87",
    "text": "Resource 87: This is a plaintext resource",
    "uri": "test://static/resource/87",
  },
  {
    "blob": "UmVzb3VyY2UgODg6IFRoaXMgaXMgYSBiYXNlNjQgYmxvYg==",
    "mimeType": "application/octet-stream",
    "name": "Resource 88",
    "uri": "test://static/resource/88",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 89",
    "text": "Resource 89: This is a plaintext resource",
    "uri": "test://static/resource/89",
  },
  {
    "blob": "UmVzb3VyY2UgOTA6IFRoaXMgaXMgYSBiYXNlNjQgYmxvYg==",
    "mimeType": "application/octet-stream",
    "name": "Resource 90",
    "uri": "test://static/resource/90",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 91",
    "text": "Resource 91: This is a plaintext resource",
    "uri": "test://static/resource/91",
  },
  {
    "blob": "UmVzb3VyY2UgOTI6IFRoaXMgaXMgYSBiYXNlNjQgYmxvYg==",
    "mimeType": "application/octet-stream",
    "name": "Resource 92",
    "uri": "test://static/resource/92",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 93",
    "text": "Resource 93: This is a plaintext resource",
    "uri": "test://static/resource/93",
  },
  {
    "blob": "UmVzb3VyY2UgOTQ6IFRoaXMgaXMgYSBiYXNlNjQgYmxvYg==",
    "mimeType": "application/octet-stream",
    "name": "Resource 94",
    "uri": "test://static/resource/94",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 95",
    "text": "Resource 95: This is a plaintext resource",
    "uri": "test://static/resource/95",
  },
  {
    "blob": "UmVzb3VyY2UgOTY6IFRoaXMgaXMgYSBiYXNlNjQgYmxvYg==",
    "mimeType": "application/octet-stream",
    "name": "Resource 96",
    "uri": "test://static/resource/96",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 97",
    "text": "Resource 97: This is a plaintext resource",
    "uri": "test://static/resource/97",
  },
  {
    "blob": "UmVzb3VyY2UgOTg6IFRoaXMgaXMgYSBiYXNlNjQgYmxvYg==",
    "mimeType": "application/octet-stream",
    "name": "Resource 98",
    "uri": "test://static/resource/98",
  },
  {
    "mimeType": "text/plain",
    "name": "Resource 99",
    "text": "Resource 99: This is a plaintext resource",
    "uri": "test://static/resource/99",
  },
  {
    "blob": "UmVzb3VyY2UgMTAwOiBUaGlzIGlzIGEgYmFzZTY0IGJsb2I=",
    "mimeType": "application/octet-stream",
    "name": "Resource 100",
    "uri": "test://static/resource/100",
  },
]
`;

exports[`@xsmcp/everything-original > listTools 1`] = `
[
  {
    "description": "Echoes back the input",
    "inputSchema": {
      "$schema": "http://json-schema.org/draft-07/schema#",
      "additionalProperties": false,
      "properties": {
        "message": {
          "description": "Message to echo",
          "type": "string",
        },
      },
      "required": [
        "message",
      ],
      "type": "object",
    },
    "name": "echo",
  },
  {
    "description": "Adds two numbers",
    "inputSchema": {
      "$schema": "http://json-schema.org/draft-07/schema#",
      "additionalProperties": false,
      "properties": {
        "a": {
          "description": "First number",
          "type": "number",
        },
        "b": {
          "description": "Second number",
          "type": "number",
        },
      },
      "required": [
        "a",
        "b",
      ],
      "type": "object",
    },
    "name": "add",
  },
  {
    "description": "Prints all environment variables, helpful for debugging MCP server configuration",
    "inputSchema": {
      "$schema": "http://json-schema.org/draft-07/schema#",
      "additionalProperties": false,
      "properties": {},
      "type": "object",
    },
    "name": "printEnv",
  },
  {
    "description": "Demonstrates a long running operation with progress updates",
    "inputSchema": {
      "$schema": "http://json-schema.org/draft-07/schema#",
      "additionalProperties": false,
      "properties": {
        "duration": {
          "default": 10,
          "description": "Duration of the operation in seconds",
          "type": "number",
        },
        "steps": {
          "default": 5,
          "description": "Number of steps in the operation",
          "type": "number",
        },
      },
      "type": "object",
    },
    "name": "longRunningOperation",
  },
  {
    "description": "Samples from an LLM using MCP's sampling feature",
    "inputSchema": {
      "$schema": "http://json-schema.org/draft-07/schema#",
      "additionalProperties": false,
      "properties": {
        "maxTokens": {
          "default": 100,
          "description": "Maximum number of tokens to generate",
          "type": "number",
        },
        "prompt": {
          "description": "The prompt to send to the LLM",
          "type": "string",
        },
      },
      "required": [
        "prompt",
      ],
      "type": "object",
    },
    "name": "sampleLLM",
  },
  {
    "description": "Returns the MCP_TINY_IMAGE",
    "inputSchema": {
      "$schema": "http://json-schema.org/draft-07/schema#",
      "additionalProperties": false,
      "properties": {},
      "type": "object",
    },
    "name": "getTinyImage",
  },
  {
    "description": "Demonstrates how annotations can be used to provide metadata about content",
    "inputSchema": {
      "$schema": "http://json-schema.org/draft-07/schema#",
      "additionalProperties": false,
      "properties": {
        "includeImage": {
          "default": false,
          "description": "Whether to include an example image",
          "type": "boolean",
        },
        "messageType": {
          "description": "Type of message to demonstrate different annotation patterns",
          "enum": [
            "error",
            "success",
            "debug",
          ],
          "type": "string",
        },
      },
      "required": [
        "messageType",
      ],
      "type": "object",
    },
    "name": "annotatedMessage",
  },
  {
    "description": "Returns a resource reference that can be used by MCP clients",
    "inputSchema": {
      "$schema": "http://json-schema.org/draft-07/schema#",
      "additionalProperties": false,
      "properties": {
        "resourceId": {
          "description": "ID of the resource to reference (1-100)",
          "maximum": 100,
          "minimum": 1,
          "type": "number",
        },
      },
      "required": [
        "resourceId",
      ],
      "type": "object",
    },
    "name": "getResourceReference",
  },
]
`;

exports[`@xsmcp/everything-original > readResource 1`] = `
{
  "contents": [
    {
      "mimeType": "text/plain",
      "name": "Resource 1",
      "text": "Resource 1: This is a plaintext resource",
      "uri": "test://static/resource/1",
    },
  ],
}
`;

exports[`@xsmcp/everything-original > readResource 2`] = `
{
  "contents": [
    {
      "blob": "UmVzb3VyY2UgMjogVGhpcyBpcyBhIGJhc2U2NCBibG9i",
      "mimeType": "application/octet-stream",
      "name": "Resource 2",
      "uri": "test://static/resource/2",
    },
  ],
}
`;
